# coderoller

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  coderoller.pro  test.cr.xml
app/: coderoller.pro  linux_main.cpp
doc/: encoding
include/: cr_constants.h  cr_globals.h  cr_util.h  generate.h  meta.h
include/base/: serializable.h  stream_dispatcher.h  stream_roller.h  stream_roller.tpp
include/core/: exception.h  file.h  log.h  types.h
include/languages/: cpp.h  generator.h
include/languages/cpp/: cpp_class_generator.h  cpp_generator.h  cpp_util.h
include/parse/: parse.h
src/: cr_globals.cpp  cr_util.cpp  generate.cpp  linux_main.cpp
src/base/: stream_dispatcher.cpp  stream_roller.cpp
src/core/: exception.cpp  file.cpp  log.cpp
src/languages/: cpp.cpp
src/languages/cpp/: cpp_class_generator.cpp  cpp_generator.cpp  cpp_util.cpp
src/parse/: parse.cpp
test/examples/: compound.cr.xml  test.cr.xml
